# Laniakea

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  SECURITY.md  alert.rules  docker-compose.yml  prometheus.yml
docs/: api-reference.md  architecture.md  development.md
src/program/: lib.rs
tests/: test_neural_network.rs
