[package]
name = "galactic-neural-network"
version = "0.1.0"
edition = "2021"
description = "A cutting-edge distributed computing framework combining AI with blockchain technology"
authors = ["Galactic Network Foundation <dev@galacticnetwork.io>"]
license = "Proprietary"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.17.0"
thiserror = "1.0.50"
num-derive = "0.4"
num-traits = "0.2"
arrayref = "0.3.7"
borsh = "0.10.3"
borsh-derive = "0.10.3"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"

[lib]
crate-type = ["cdylib", "lib"] 